--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h3>Sliders of images</h3>
+    <img src="images/Bird.avif" alt="">
+    <img src="images/Flower 1.jpg" alt="">
+    <img src="images/Lions.jpg" alt="">
 </body>
 </html>
